--- a/other.html
+++ b/other.html
@@ -20,10 +20,10 @@
     <nav class='cf'>
       <ul class='cf'>
         <li>
-          <a href='/'>Home</a>
+          <a href='/pwa_test/'>Home</a>
         </li>
         <li>
-          <a href='/other.html'>Other Page</a>
+          <a href='/pwa_test/other.html'>Other Page</a>
         </li>
       </ul>
       <a href='#' id='openup'>MENU</a>      
